[package]
name = "rocket-no-content"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["AniMi Labs"]
description = "Provides a 204 No Content responder for Rocket. Includes optional schema definition."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
schema = ["rocket-autodocu", "autodocu"]
default = []

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false }
autodocu = { version = "0.9.1", optional = true, default-features = false }
rocket-autodocu = { version = "0.9.1", optional = true, default-features = false }
